--- a/templates/tab-tab3.html
+++ b/templates/tab-tab3.html
@@ -6,40 +6,46 @@
       <li class="{{state==0?'active':''}}" ng-click="changeState(0)">已发订单</li>
       <li class="{{state==1?'active':''}}" ng-click="changeState(1)">已接订单</li>
     </ul>
-    <ion-slide-box on-slide-changed="slideHasChange($index)" active-slide="state" show-pager="false">
+
+    <ion-list ng-show="state==0">
+      <ion-item ng-repeat="item in listData" class="item item-thumbnail-left" ng-click="goDetail3(item)">
+        <img ng-src="{{item.imgurl}}">
+        <p>{{item.nickname}}</p>
+        <span>{{item.title}}</span>
+        <p>
+          {{item.pay}} {{item.reward}} {{item.status}}
+        </p>
+        <p>
+          {{item.finishtime}}
+        </p>
+        <p>创建时间:{{item.createtime}}</p>
+      </ion-item>
+    </ion-list>
+
+
+    <ion-list ng-show="state==1">
+      <ion-item ng-repeat="item in listData2" class="item item-thumbnail-left" ng-click="goDetail32(item)">
+        <img ng-src="{{item.imgurl}}">
+        <p>{{item.nickname}}</p>
+        <span>{{item.title}}</span>
+        <p>
+          {{item.pay}} {{item.reward}} {{item.finishtime}} {{item.status}}
+        </p>
+        <p>接单时间:{{item.createtime}}</p>
+      </ion-item>
+    </ion-list>
+
+    <!-- <ion-slide-box on-slide-changed="slideHasChange($index)" active-slide="state" show-pager="false">
       <ion-slide>
         <div class="box">
-          <ion-list>
-            <ion-item ng-repeat="item in listData" class="item item-thumbnail-left" ng-click="goDetail3(item)">
-              <img ng-src="{{item.imgurl}}">
-              <p>{{item.nickname}}</p>
-              <span>{{item.title}}</span>
-              <p>
-                {{item.pay}} {{item.reward}} {{item.status}}
-              </p>
-              <p>
-                {{item.finishtime}}
-              </p>
-              <p>创建时间:{{item.createtime}}</p>
-            </ion-item>
-          </ion-list>
+
         </div>
       </ion-slide>
       <ion-slide>
         <div class="box">
-          <ion-list>
-            <ion-item ng-repeat="item in listData2" class="item item-thumbnail-left" ng-click="goDetail32(item)">
-              <img ng-src="{{item.imgurl}}">
-              <p>{{item.nickname}}</p>
-              <span>{{item.title}}</span>
-              <p>
-                {{item.pay}} {{item.reward}} {{item.finishtime}} {{item.status}}
-              </p>
-              <p>接单时间:{{item.createtime}}</p>
-            </ion-item>
-          </ion-list>
+
         </div>
       </ion-slide>
-    </ion-slide-box>
+    </ion-slide-box> -->
   </ion-content>
 </ion-view>
