--- a/templates/login.html
+++ b/templates/login.html
@@ -9,6 +9,7 @@
           <span class="input-label">账户</span>
           <input type="tel" placeholder="请输入手机号码" ng-model="phone">
         </label>
+        
         <label class="item item-input">
           <span class="input-label">密码</span>
           <input type="password" placeholder="请输入6~16位密码" ng-model="password">
@@ -27,7 +28,7 @@
         </div>
       </div> -->
 
-      <a href="#/logins/regist" class="left">注册</a>
+      <a href="#/logins/agreement" class="left">注册</a>
       <a href="#/logins/forget" class="right">忘记密码</a>
     </form>
 
