--- a/templates/orderDetail3.html
+++ b/templates/orderDetail3.html
@@ -83,7 +83,7 @@
 
     <div class="row" ng-show="status=='未付款'">
       <div class="col col-50">
-        <a class="button button-block button-positive" ng-click="pay()">立即付款</a>
+        <a class="button button-block button-positive" ng-click="pay(data)">立即付款</a>
       </div>
       <div class="col col-50">
         <a class="button button-block button-positive" ng-click="cancel(data)">取消订单</a>
