--- a/templates/regist.html
+++ b/templates/regist.html
@@ -23,7 +23,7 @@
           <input type="tel" placeholder="请输入验证码" ng-model="code">
         </label>
       </div>
-
+  <a href="#/logins/agreement">注册协议</a>
       <div class="row">
         <div class="col col-50">
         <a class="button button-block button-positive" ng-click="getCode(phone,password,password2,code)" ng-show="time==60">获取验证码</a>
