--- a/templates/tabs.html
+++ b/templates/tabs.html
@@ -51,6 +51,10 @@
           <i class="icon ion-ios-cart-outline"></i> &nbsp;
           <span>{{infoData.score}}分</span>
         </ion-item>
+        <ion-item menu-close ng-click="goWithDrawCash()">
+          <i class="icon ion-ios-cart-outline"></i> &nbsp;
+          <span>提现</span>
+        </ion-item>
         <ion-item href="#/tab/orderDetail">
           <i class="icon ion-ios-cart-outline"></i> &nbsp;
           <span>五星好评</span>
