--- a/templates/withdrawCash.html
+++ b/templates/withdrawCash.html
@@ -1,9 +1,4 @@
-<ion-header-bar align-title="center" class="bar-stable bar-header">
-  <button ng-click="goBack()" class="button back-button buttons button-clear header-item"><i class="icon ion-ios-arrow-back"></i>
-      <span class="back-text"><span class="default-title hide">返回</span><span class="previous-title">订单</span></span></button>
-<div class="title title-center header-item">提现</div>
-</ion-header-bar>
-
+<ion-view view-title="提现"  class="bgGray">
   <ion-content>
     <form action="">
       <div class="list">
@@ -29,3 +24,4 @@
       </div>
     </form>
   </ion-content>
+</ion-view>
