--- a/templates/setting.html
+++ b/templates/setting.html
@@ -1,9 +1,9 @@
-<ion-header-bar align-title="center" class="bar-stable bar-header">
-  <button ng-click="goBack()" class="button back-button buttons button-clear header-item"><i class="icon ion-ios-arrow-back"></i> 
+<!-- <ion-header-bar align-title="center" class="bar-stable bar-header">
+  <button ng-click="goBack()" class="button back-button buttons button-clear header-item"><i class="icon ion-ios-arrow-back"></i>
       <span class="back-text"><span class="default-title hide">返回</span><span class="previous-title">订单</span></span></button>
 <div class="title title-center header-item">设置</div>
-</ion-header-bar>
-
+</ion-header-bar> -->
+<ion-view view-title="设置" hide-tabs="true">
 
   <ion-content>
       <div class="list">
@@ -19,3 +19,4 @@
         </div>
       </div>
   </ion-content>
+</ion-view>
