--- a/templates/tab-tab4.html
+++ b/templates/tab-tab4.html
@@ -32,7 +32,7 @@
       </ion-item>
       <ion-item>
         <i class="icon ion-ios-cart-outline"></i> &nbsp;
-        <span>五星好评</span>
+        <span>好评度: {{infoData.pjscore}}</span>
       </ion-item>
       <ion-item  ng-click="goCoupon()" menu-close>
         <i class="icon ion-ios-gear-outline"></i> &nbsp;
