--- a/templates/setting.html
+++ b/templates/setting.html
@@ -9,7 +9,7 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">修改昵称</span>
-          <input type="text" placeholder="请输入昵称"  ng-model="nickname.nickname">
+          <input type="text" placeholder="请输入昵称"  ng-model="info.nickname">
         </label>
         <ion-toggle ng-model="info.airplaneMode" >是否接受推送</ion-toggle>
         <div class="row">
