--- a/templates/withdrawCash.html
+++ b/templates/withdrawCash.html
@@ -4,11 +4,11 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">支付宝账号</span>
-          <input type="text" placeholder="请输入标题" ng-model="info.username">
+          <input type="text" placeholder="请输入支付宝账号" ng-model="info.username">
         </label>
         <label class="item item-input">
           <span class="input-label">提现金额</span>
-          <input type="text" placeholder="请输入标题" ng-model="info.money">
+          <input type="text" placeholder="请输入提现金额" ng-model="info.money">
         </label>
         <label class="item item-input">
           <span class="input-label">可提现金额</span>
