--- a/templates/payIndex.html
+++ b/templates/payIndex.html
@@ -1,8 +1,4 @@
-<ion-header-bar align-title="center" class="bar-stable bar-header">
-  <!-- <button ng-click="$ionicGoBack()" class="button back-button buttons button-clear header-item"><i class="icon ion-ios-arrow-back"></i>
-      <span class="back-text"><span class="default-title hide">返回</span><span class="previous-title">订单</span></span></button> -->
-<div class="title title-center header-item">在线支付</div>
-</ion-header-bar>
+<ion-view view-title="在线支付" ng-switch on="state" hide-tabs="true">
   <ion-content>
 
     <ion-list>
@@ -51,3 +47,4 @@
       </div>
     </div>
   </ion-content>
+</ion-view>
