--- a/templates/tab-tab2.html
+++ b/templates/tab-tab2.html
@@ -1,9 +1,16 @@
-<ion-view view-title="商家优惠">
+<ion-view view-title="商家优惠" class="bgGray">
   <ion-content>
-      <ion-refresher pulling-text="下拉刷新..." on-refresh="refresh()">
+    <ion-refresher pulling-text="下拉刷新..." on-refresh="refresh()">
     </ion-refresher>
+
     <ion-list>
-      <ion-item ng-repeat="listdata in listdatas" class="item item-thumbnail-left" ng-click="goDetail2(listdata)" >
+      <div class="card" ng-show="!listdatas[1]">
+        <div class="item item-text-wrap" >
+          暂时没有商家优惠喔~
+        </div>
+      </div>
+
+      <ion-item ng-repeat="listdata in listdatas" class="item item-thumbnail-left" ng-click="goDetail2(listdata)">
         <img ng-src="{{listdata.imgUrl}}">
         <h2>{{listdata.shopName}}</h2>
       </ion-item>
