--- a/templates/orderDetail3.html
+++ b/templates/orderDetail3.html
@@ -23,7 +23,7 @@
       </label>
       <label class="item item-input">
         <span class="input-label">联系电话</span>
-        <div>{{data.phone}}</div>
+        <div><a href="tel:{{data.phone}}">{{data.phone}}</a></div>
       </label>
 
       <label class="item item-input">
@@ -65,7 +65,7 @@
       </label>
       <label class="item item-input">
         <span class="input-label">联系电话</span>
-        <div>{{data.username}}</div>
+        <div><a href="tel:{{data.username}}">{{data.username}}</a></div>
       </label>
       <label class="item item-input">
         <span class="input-label">佣金</span>
