--- a/templates/orderDetail32.html
+++ b/templates/orderDetail32.html
@@ -23,7 +23,7 @@
       </label>
       <label class="item item-input">
         <span class="input-label">联系电话</span>
-        <div>{{data.phone}}</div>
+        <div><a href="tel:{{data.phone}}">{{data.phone}}</a></div>
       </label>
 
       <label class="item item-input">
@@ -61,11 +61,11 @@
       </label>
       <label class="item item-input">
         <span class="input-label">联系人</span>
-        <div>{{data.contacts}}</div>
+        <div><a href="tel:{{data.contacts}}">{{data.contacts}}</a></div>
       </label>
       <label class="item item-input">
         <span class="input-label">联系电话</span>
-        <div>{{data.phone}}</div>
+        <div><a href="tel:{{data.phone}}">{{data.phone}}</a></div>
       </label>
       <label class="item item-input">
         <span class="input-label">发单人昵称</span>
@@ -73,7 +73,7 @@
       </label>
       <label class="item item-input">
         <span class="input-label">发单人手机</span>
-        <div>{{data.bossphone}}</div>
+        <div><a href="tel:{{data.bossphone}}">{{data.bossphone}}</a></div>
       </label>
       <label class="item item-input">
         <span class="input-label">备注</span>
