--- a/templates/tab-tab1.html
+++ b/templates/tab-tab1.html
@@ -28,7 +28,7 @@
 
     <ion-list>
 
-      <div class="card" ng-show="!listdatas[0]">
+      <div class="card"  ng-show="!listdatas[0]"style="width:210px;text-align:center;position:absolute;top:50px;left:50%;margin: 0;transform:translateX(-50%);-webkit-transform:translateX(-50%)">
         <div class="item item-text-wrap" >
           暂时没有可以接的单喔~
         </div>
